# physfs-cpp

./: CMakeLists.txt
include/physfs++/: physfs.hpp
src/: CMakeLists.txt  physfs.cpp
